rotation overflow fixed, masks working. Premature trigger on secondHalf calculation of odd numbers still broken

--- a/src/component/Body/Clock.module.css
+++ b/src/component/Body/Clock.module.css
@@ -26,6 +26,9 @@
 }
 
 .mask2 {
+    position: absolute;
+    height: 100%;
+    width: 50%;
     background-color: lightcoral;
     border-radius: 0 70px 70px 0;
     right: 0;
